# Deuteron_Exp

./: .gitignore  LICENSE  setup.sh
anal_D_tbt/: input_tree  readme.md
anal_D_tbt/anal_note/: cut.md
anal_D_tbt/original_data_tbt/: Draw_pads.cc  ratiao_px.cc  ypol_Sn124.cc  ypol_show_p.cc  zpol_Sn124_tbt.cc  zpol_show_px.cc
crosssection/: GNUmakefile  crosssection.cc
crosssection/include/: DetectorConstruction.hh
crosssection/src/: DetectorConstruction.cc
get_pdgmass/: GNUmakefile  get_pdgmass.cc
get_pdgmass/include/: NoConstruction.hh
get_pdgmass/src/: NoConstruction.cc
sim_catana/: GNUmakefile  sim_catana.cc
sim_catana/include/: CATANADetectorConstruction.hh  (+5 more)
sim_dali/: GNUmakefile  sim_dali.cc
sim_deuteron/: GNUmakefile  Makefile  sim_deuteron  sim_deuteron.cc  vis.mac
sim_s21dali/: GNUmakefile  NOTE  sim_s21dali.cc
sim_samurai21/: GNUmakefile  sim_samurai21.cc
sim_tm1510/: GNUmakefile  sim_tm1510.cc
simdayone/: GNUmakefile  simdayone.cc
simtrace/: GNUmakefile  simtrace.cc
smg4lib/: Makefile
work/smanalib/sources/: Makefile.am  smana_linkdef.hh
work/smanalib/sources/include/: TArtCrosstalkAnalysis.hh  TArtCrosstalkAnalysis_DoNothing.hh  TArtCrosstalkAnalysis_NEBULANeuLAND_Example.hh  TArtCrosstalkAnalysis_NEBULANeuLAND_samurai21_7.hh  TArtCrosstalkAnalysis_NEBULANeuLAND_samurai21_8.hh
work/smanalib/sources/src/: TArtCrosstalkAnalysis.cc  TArtCrosstalkAnalysis_DoNothing.cc  TArtCrosstalkAnalysis_NEBULANeuLAND_Example.cc  TArtCrosstalkAnalysis_NEBULANeuLAND_samurai21_7.cc  TArtCrosstalkAnalysis_NEBULANeuLAND_samurai21_8.cc
(+304 files in other folders)
